salesforce/generated/sunrun_ingest_api/desktop-mf/objects/Desktop___Dim_Product__dll/fields/Packaging_Type__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Type__c</fullName>
    <label>Packaging Type</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Packaging_Type</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>